--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,11 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.15",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.0"
   }
 }
