--- a/app/package.json
+++ b/app/package.json
@@ -9,13 +9,21 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.4.1",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
     "mongoose": "^4.4.15",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "amazeui-touch": "^1.0.0-beta.1",
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "json-loader": "^0.5.4",
+    "node-loader": "^0.5.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "webpack": "^1.13.0"
   }
 }
