--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "ejs": "^2.4.1",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.15",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
